--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,11 @@
+/* Import the Poppins font from Google Fonts */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  /* font-family: "Poppins", sans-serif; */
 }
 
 body {
@@ -11,6 +15,9 @@ body {
 
 /* Navigation bar styling */
 .navbar {
+  display: flex;
+  justify-content: space-between;
+  align-content: center;
   background-color: #333;
   overflow: hidden;
   padding: 10px;
@@ -19,16 +26,17 @@ body {
 .navbar a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  color: #002cf1;
   text-align: center;
   padding: 14px 20px;
   text-decoration: none;
   font-size: 17px;
+  font-family: "Poppins", sans-serif;
 }
 
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
+.logo {
+  margin-right: 5px;
+  height: 20px;
 }
 
 .navbar .cart-button {
@@ -42,6 +50,23 @@ body {
   font-size: 16px;
   margin-top: 6px;
   margin-right: 16px;
+}
+
+/* Style for the search input box */
+.search-bar {
+  width: 500px;
+  padding: 10px 15px;
+  font-size: 16px;
+  border: 2px solid #ccc;
+  border-radius: 25px;
+  transition: all 0.3s ease;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.search-bar:focus {
+  outline: none;
+  border-color: #007bff;
+  box-shadow: 0 4px 8px rgba(0, 123, 255, 0.2);
 }
 
 .lessons-container {
