--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  /* font-family: "Poppins", sans-serif; */
+  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -32,11 +32,6 @@ body {
   text-decoration: none;
   font-size: 17px;
   font-family: "Poppins", sans-serif;
-}
-
-.logo {
-  margin-right: 5px;
-  height: 20px;
 }
 
 .navbar .cart-button {
@@ -72,7 +67,7 @@ body {
 .lessons-container {
   display: flex;
   flex-wrap: wrap; /* Ensures cards wrap to the next line if there's no space */
-  gap: 10px; /* Adds space between cards */
+  gap: 1px; /* Adds space between cards */
   justify-content: center; /* Distributes the cards evenly */
 }
 
@@ -80,8 +75,8 @@ body {
 .card {
   border: 1px solid #ccc;
   border-radius: 8px;
-  padding: 20px;
-  margin: 10px;
+  padding: 10px;
+  margin: 5px;
   background-color: #f9f9f9;
   width: 300px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
