--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Poppins", sans-serif;
+  /* font-family: "Poppins", sans-serif; */
 }
 
 body {
@@ -67,7 +67,7 @@ body {
 .lessons-container {
   display: flex;
   flex-wrap: wrap; /* Ensures cards wrap to the next line if there's no space */
-  gap: 1px; /* Adds space between cards */
+  gap: 10px; /* Adds space between cards */
   justify-content: center; /* Distributes the cards evenly */
 }
 
@@ -75,8 +75,8 @@ body {
 .card {
   border: 1px solid #ccc;
   border-radius: 8px;
-  padding: 10px;
-  margin: 5px;
+  padding: 20px;
+  margin: 10px;
   background-color: #f9f9f9;
   width: 300px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
