--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ body {
   padding: 14px 20px;
   text-decoration: none;
   font-size: 17px;
+  font-weight: bold;
   font-family: "Poppins", sans-serif;
 }
 
