--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  /* font-family: "Poppins", sans-serif; */
+  font-family: "Poppins", sans-serif;
 }
 
 body {
@@ -26,7 +26,7 @@ body {
 .navbar a {
   float: left;
   display: block;
-  color: #002cf1;
+  color: #fff;
   text-align: center;
   padding: 14px 20px;
   text-decoration: none;
